# dllist-serializer

./: CMakeLists.txt  README.md
res/: inlet.in  outlet.out
src/: dlist.cpp  dlist.hpp  dparser.cpp  dparser.hpp  listnode.hpp  main.cpp
